bug in alignment for utility classes fixed

--- a/less/core/utility.less
+++ b/less/core/utility.less
@@ -1,26 +1,39 @@
 // Utilities
 // Small collection of classes for your content
 .am-active {
-  background-color:@am-primary-bg; }
+  background-color:@am-primary-bg;
+}
 .am-text-left {
-  text-align: left; }
+  text-align: left;
+  .justify-content(flex-start);
+}
 .am-text-right {
-  text-align: right; }
+  text-align: right;
+  .justify-content(flex-end);
+}
 .am-text-center {
-  text-align: center; }
+  text-align: center;
+  .justify-content(center);
+}
 .am-text-lowercase {
-  text-transform: lowercase; }
+  text-transform: lowercase;
+}
 .am-text-uppercase {
-  text-transform: uppercase; }
+  text-transform: uppercase;
+}
 .am-text-capitalize {
-  text-transform: capitalize; }
+  text-transform: capitalize;
+}
 
 // http://alistapart.com/article/flat-ui-and-forms
 // http://davidwalsh.name/html5-buttons
 .am-btn-primary {
   background-color: @am-closure;
-  color: #fff; }
+  color: #fff;
+}
 .am-bg-primary {
-  background-color: @am-primary-bg; }
+  background-color: @am-primary-bg;
+}
 .am-bg-default {
-  background-color: @am-secondary-bg; }
+  background-color: @am-secondary-bg;
+}
